--- a/.hintrc
+++ b/.hintrc
@@ -14,7 +14,8 @@
       "default",
       {
         "ignore": [
-          "width: fit-content"
+          "width: fit-content",
+          "min-height: fit-content"
         ]
       }
     ]
